--- a/src/app/Components/login/login.component.html
+++ b/src/app/Components/login/login.component.html
@@ -1,9 +1,9 @@
 <div class="login-form">
-  <span>User Name</span>
+  <span>Логин:</span>
   <hr/>
   <input type="text" pInputText [(ngModel)]="employee.login">
   <hr/>
-  <span>Password</span>
+  <span>Пароль:</span>
   <hr/>
   <input type="password" pInputText [(ngModel)]="employee.password">
   <hr/>
