--- a/src/app/Components/login/login.component.html
+++ b/src/app/Components/login/login.component.html
@@ -1,11 +1,11 @@
 <div class="login-form">
   <span>Логин:</span>
   <hr/>
-  <input type="text" pInputText [(ngModel)]="employee.login">
+  <input type="text" pInputText [(ngModel)]="employee.Login">
   <hr/>
   <span>Пароль:</span>
   <hr/>
-  <input type="password" pInputText [(ngModel)]="employee.password">
+  <input type="password" pInputText [(ngModel)]="employee.Password">
   <hr/>
   <button pButton type="button" (click)="Authorize()" label="Login"></button>
 </div>
