--- a/src/app/Components/login/login.component.html
+++ b/src/app/Components/login/login.component.html
@@ -1,11 +1,11 @@
 <div class="login-form">
-  <span>Логин:</span>
+  <span>User Name</span>
   <hr/>
-  <input type="text" pInputText [(ngModel)]="employee.Login">
+  <input type="text" pInputText [(ngModel)]="employee.login">
   <hr/>
-  <span>Пароль:</span>
+  <span>Password</span>
   <hr/>
-  <input type="password" pInputText [(ngModel)]="employee.Password">
+  <input type="password" pInputText [(ngModel)]="employee.password">
   <hr/>
   <button pButton type="button" (click)="Authorize()" label="Login"></button>
 </div>
