--- a/src/app/Components/passports-grid/passports-grid.component.html
+++ b/src/app/Components/passports-grid/passports-grid.component.html
@@ -1,26 +1,16 @@
-<p-table [value]="passports">
-  <ng-template pTemplate="header">
-    <tr>
-      <th>ID</th>
-      <th>Hostname</th>
-      <th>Inventary number</th>
-      <th>IT Employee</th>
-      <th>Department</th>
-      <th>Room</th>
-      <th>MAC</th>
-      <th>IP Address</th>
-    </tr>
-  </ng-template>
-  <ng-template pTemplate="body" let-passport>
-      <tr>
-        <td>{{ passport.id }}</td>
-        <td>{{ passport.hostName }}</td>
-        <td>{{ passport.inventaryNumber }}</td>
-        <td>{{ passport.employeeName }}</td>
-        <td>{{ passport.department }}</td>
-        <td>{{ passport.room }}</td>
-        <td>{{ passport.macAddress }}</td>
-        <td>{{ passport.ipAddress }}</td>
-      </tr>
-  </ng-template>
-</p-table>
+<table>
+  <thead>
+  <tr>
+    <td>1</td>
+    <td>2</td>
+    <td>3</td>
+  </tr>
+  </thead>
+  <tbody>
+  <tr *ngFor="let passport of passports">
+    <td>{{ passport.hostName }}</td>
+    <td>{{ passport.employeeName }}</td>
+    <td>{{ passport.department }}</td>
+  </tr>
+  </tbody>
+</table>
