--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-
-<router-outlet><app-header *ngIf="currentUser"></app-header></router-outlet>
+<app-header *ngIf="currentUser"></app-header>
+<router-outlet></router-outlet>
