--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -1,1 +1,1 @@
-<p-tabMenu [model]="menuItems" [activeItem]="activateItem"></p-tabMenu>
+<p-tabMenu [model]="menuItems" [activeItem]="activateItem"><p>{{currentUser.Name}}</p></p-tabMenu>
