--- a/src/app/Components/login/login.component.html
+++ b/src/app/Components/login/login.component.html
@@ -1,11 +1,24 @@
-<div class="login-form">
-  <span>Логин:</span>
-  <hr/>
-  <input type="text" pInputText [(ngModel)]="employee.Login">
-  <hr/>
-  <span>Пароль:</span>
-  <hr/>
-  <input type="password" pInputText [(ngModel)]="employee.Password">
-  <hr/>
-  <button pButton type="button" (click)="Authorize()" label="Login"></button>
-</div>
+<h2>Login</h2>
+<form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+  <div class="form-group">
+    <label for="Login">Username</label>
+    <input type="text" formControlName="Login" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.Login.errors }" />
+    <div *ngIf="submitted && f.Login.errors" class="invalid-feedback">
+      <div *ngIf="f.Login.errors.required">Username is required</div>
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="Password">Password</label>
+    <input type="Password" formControlName="Password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.Password.errors }" />
+    <div *ngIf="submitted && f.Password.errors" class="invalid-feedback">
+      <div *ngIf="f.Password.errors.required">Password is required</div>
+    </div>
+  </div>
+  <div class="form-group">
+    <button [disabled]="loading" class="btn btn-primary">
+      <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+      Login
+    </button>
+    <a routerLink="/register" class="btn btn-link">Register</a>
+  </div>
+</form>
